// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPanelTest render - isPanelOpen = false 1`] = `
<GenericPanel
  className="settings-panel"
  closeButtonAriaLabel="Close settings panel"
  hasCloseButton={true}
  isOpen={false}
  onDismiss={[Function]}
  title="Settings"
>
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
</GenericPanel>
`;

exports[`SettingsPanelTest render - isPanelOpen = true 1`] = `
<GenericPanel
  className="settings-panel"
  closeButtonAriaLabel="Close settings panel"
  hasCloseButton={true}
  isOpen={true}
  onDismiss={[Function]}
  title="Settings"
>
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
</GenericPanel>
`;

exports[`SettingsPanelTest renders the settings component: settings 1 1`] = `
<div
  className="test-settings"
>
  <div>
    test-settings-1
  </div>
  <div>
    Object {
      "deps": Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      },
      "featureFlagData": Object {
        "test-flag": false,
      },
      "userConfigurationStoreState": Object {},
    }
  </div>
</div>
`;

exports[`SettingsPanelTest renders the settings component: settings 2 1`] = `
<div
  className="test-settings"
>
  <div>
    test-settings-2
  </div>
  <div>
    Object {
      "deps": Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      },
      "featureFlagData": Object {
        "test-flag": false,
      },
      "userConfigurationStoreState": Object {},
    }
  </div>
</div>
`;

exports[`SettingsPanelTest renders the settings component: settings 3 1`] = `
<div
  className="test-settings"
>
  <div>
    test-settings-3
  </div>
  <div>
    Object {
      "deps": Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      },
      "featureFlagData": Object {
        "test-flag": false,
      },
      "userConfigurationStoreState": Object {},
    }
  </div>
</div>
`;
